[apiFirst/openAPI] Modify all structure to the process methods
